syntax = "proto3";

package user;


// specifies the package name for the generated Go code.
// We would want all the generated GO files  to be under the pb package inside the
// pb directory of the project.
// "github.com/saalikmubeen/go-grpc-implementation/pb;pb":
// github.com/saalikmubeen/go-grpc-implementation/pb is the folder where
// gnerated code will be stored
// and pb will be the go pacakge name of the generated code.
option go_package = "github.com/saalikmubeen/go-grpc-implementation/pb;pb";


import "google/protobuf/timestamp.proto";

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  google.protobuf.Timestamp password_changed_at = 4;
  google.protobuf.Timestamp created_at = 5;
}
